# Tasks

./: .gitignore  README.md
check_if_palindrome/: CMakeLists.txt  README.md
check_if_palindrome/headers/: palindrome_checker.hpp  utilities.hpp
check_if_palindrome/sources/: main.cpp  palindrome_checker.cpp
count_vowels/: CMakeLists.txt  README.md
count_vowels/headers/: utilities.hpp  vowel_counter.hpp
count_vowels/sources/: main.cpp  utilities.cpp  vowel_counter.cpp
count_words_in_string/: CMakeLists.txt  README.md  random_text.txt
count_words_in_string/headers/: console_interface.hpp  word_counter.hpp
count_words_in_string/sources/: console_interface.cpp  main.cpp  word_counter.cpp
pig_latin/: CMakeLists.txt  README.md
pig_latin/headers/: pig_latin_converter.hpp  utilities.hpp
pig_latin/sources/: main.cpp  pig_latin_converter.cpp
reverse_string/: CMakeLists.txt  README.md
reverse_string/headers/: string_reverser.hpp  utilities.hpp
reverse_string/sources/: main.cpp  string_reverser.cpp
